--- a/src/style.css
+++ b/src/style.css
@@ -1,34 +1,66 @@
 :root {
-    --bg-gray: #ededed;
+    --bg-gray: #f3f4f4;
+    --hover-gray: #ecefef;
     --border-gray: #b7b7b7;
-    --brown: rgb(136, 117, 96);
+    --default: rgb(50, 140, 145);
     --green: rgb(86, 142, 64);
     --blue: rgb(59, 146, 213);
+}
+
+@font-face {
+    font-family: "poppins";
+    src: url("./Poppins.ttf") format("truetype");
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "poppins";
+    src: url("./Poppins-SemiBold.ttf") format("truetype");
+    font-weight: bold;
+    font-style: normal;
 }
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "poppins", Arial, sans-serif;
 }
 
 body {
-    display: flex;
+    display: grid;
+    grid-template-columns: 300px auto;
+    grid-template-rows: auto 1fr;
+    height: 100vh;
+}
+
+#header {
+    grid-column: 1 / 3;
+    align-self: center;
+    padding: 40px;
+    background-color: var(--default);
 }
 
 #sidebar {
-    width: 200px;
+    height: 100%;
     background-color: var(--bg-gray);
-    height: 100vh;
+    padding-top: 50px;
     display: flex;
     flex-direction: column;
-    align-items: center;
 }
 
 #sidebar h2 {
-    margin-top: 60px;
-    margin-bottom: 30px;
+    margin: 10px 40px;
+    align-self: flex-start;
+}
+
+.projects-header {
+    display: flex;
+    padding: 20px 0;
+    justify-content: space-between;
+    border-top: 1px solid var(--border-gray);
+    margin-top: 50px;
 }
 
 .projects {
@@ -37,28 +69,61 @@ body {
 }
 
 #sidebar button {
-    font-size: 20px;
+    font-size: 18px;
     border: none;
-    padding: 16px;
+    border-radius: 10px;
+    padding: 10px 20px;
+    margin: 0 30px;
     background-color: var(--bg-gray);
+    text-align: left;
+}
+
+.plus-icon {
+    display: flex;
+    width: 30px;
+    height: 30px;
+    align-items: center;
+}
+
+#sidebar button:hover {
+    background-color: var(--hover-gray);
 }
 
 button:hover { 
     cursor: pointer;
+    background-color: var(--hover-gray);
 }
 
-#sidebar > :last-child {
-    position: absolute;
-    left: 20px;
-    bottom: 20px;
+#main {
+    height: 85%;
+    display: grid;
+    grid-template-rows: 100px 1fr auto;
+    margin: 50px auto;
+    width: clamp(500px, 60vw, 1500px);
+}
+
+#main h1 {
+    margin-bottom: 30px;
+}
+
+.tasks {
+    display: flex;
+    flex-direction: column;
+    background-color: white;
 }
 
 .task {
     display: flex;
-    padding: 10px;
+    padding: 20px 40px;
+    margin-bottom: 10px;
+    font-size: 18px;
+    background-color: white;
+    border: 1px solid var(--border-gray);
+    border-radius: 10px;
+    align-items: center;
 }
 
-.task button {
+.circle {
     width: 20px;
     height: 20px;
     background-color: white;
@@ -67,19 +132,29 @@ button:hover {
     margin-right: 20px;
 }
 
-#main {
-    margin: 100px;
+.task-text {
+    flex: 1;
+    text-align: left;
 }
 
-#main h1 {
-    margin-bottom: 30px;
+.trash-icon {
+    width: 25px;
+    height: 25px;
+    border: none;
+    background-color: transparent;
+    display: none;
+}
+
+.task:hover .trash-icon{
+    display: block;
 }
 
 .addTaskButton {
     padding: 20px;
     background-color: white;
-    border: none;
-    font-size: 20px;
+    border: 1px dashed var(--border-gray);
+    border-radius: 10px;
+    font-size: 18px;
 }
 
 dialog {
@@ -87,9 +162,9 @@ dialog {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    border: 1px solid var(--border-gray);
+    border: none;
     padding: 30px;
-    border-radius: 10px;
+    border-radius: 20px;
 }
 
 form {
@@ -104,16 +179,41 @@ form * {
 }
 
 .form-row {
-    margin: 12px;
+    margin: 12px 0;
+    width: 400px;
+    display: flex;
+    justify-content: space-between;
+}
+
+#color {
+    justify-self: flex-end;
+}
+
+.form-row input[type="text"],
+.form-row input[type="text"]:focus,
+.form-row textarea {
+    outline: none;
+    border: none;
+}
+
+.form-row input[type="text"]:focus {
+    border-bottom: 2px solid blue;
+}
+
+.form-row textarea:focus {
+    border: 2px solid blue;
+    border-radius: 10px;
 }
 
 .form-row input[type="text"],
 .form-row textarea {
-    padding: 10px;
+    width: 100%;
+    padding: 5px;
 }
 
 .form-row.buttons {
     display: flex;
+    justify-content: flex-end;
 }
 
 .form-row button {
