--- a/src/style.css
+++ b/src/style.css
@@ -12,14 +12,14 @@
 
 @font-face {
     font-family: "poppins";
-    src: url("./Poppins.ttf") format("truetype");
+    src: url("./fonts/Poppins.ttf") format("truetype");
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: "poppins";
-    src: url("./Poppins-SemiBold.ttf") format("truetype");
+    src: url("./fonts/Poppins-SemiBold.ttf") format("truetype");
     font-weight: bold;
     font-style: normal;
 }
@@ -62,6 +62,7 @@ body {
     display: flex;
     padding: 20px 0;
     justify-content: space-between;
+    align-items: center;
     border-top: 1px solid var(--border-gray);
     margin-top: 50px;
 }
@@ -79,13 +80,13 @@ body {
     margin: 0 30px;
     background-color: var(--bg-gray);
     text-align: left;
+    display: flex;
+    align-items: center;
 }
 
-.plus-icon {
-    display: flex;
+.plus-icon img {
     width: 30px;
     height: 30px;
-    align-items: center;
 }
 
 #sidebar button:hover {
@@ -98,16 +99,15 @@ body {
     grid-template-rows: 100px 1fr auto;
     padding: 50px;
     margin: 0 auto;
+    min-width: 700px;
+    max-width: 1200px;
+    width: 60vw;
 }
 
 .main-header {
     display: flex;
     justify-content: space-between;
     margin-bottom: 50px;
-}
-
-.more-options {
-    position: relative;
 }
 
 .ellipsis-icon {
@@ -119,7 +119,6 @@ body {
     padding: 10px;
     display: flex;
     align-items: center;
-    position: relative;
 }
 
 .ellipsis-icon:focus {
@@ -128,15 +127,12 @@ body {
 
 .options {
     position: absolute;
-    top: 100%;
-    right: 0;
     width: 60px;
     height: 60px;
     border: 1px solid var(--border-gray);
     overflow: hidden;
     border-radius: 10px;
     display: none;
-    align-items: flex-end;
 }
 
 .options button {
@@ -163,9 +159,6 @@ body {
     border: 1px solid var(--border-gray);
     border-radius: 10px;
     align-items: center;
-    min-width: 700px;
-    max-width: 1200px;
-    width: 60vw;
 }
 
 .circle {
